--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -10,6 +11,7 @@
 <body>
     <div>Hello</div>
     <h1>Hey buddy whats app</h1>
+    <h1>Hey I am a developer</h1>
 </body>
 
 </html>
