--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Hey buddy whats app</h1>
     <h1>Hey I am a developer</h1>
     <h1>Testing</h1>
+    <h1>Testing</h1>
 </body>
 
 </html>
